--- a/chat/package.json
+++ b/chat/package.json
@@ -3,10 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.3",
+    "socket.io": "^4.4.1",
+    "sweetalert2": "^11.4.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15",
+    "socket.io-client": "^4.4.1"
+  }
 }
